<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Viaja Fácil</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="tos_title">Terms of Service</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_decline">Refuse</string>
    <string name="search">Search</string>
    <string name="searchindirect">Search with transfers</string>
    <string name="searching">Searching ...</string>
    <string name="transports">Select means of transport</string>
    <string name="invert">Invert from/to</string>
    <string name="mapmode">Map Mode</string>
    <string name="mapnormal">Normal</string>
    <string name="mapsat">Satellite</string>
    <string name="maptraffic">Traffic</string>
    <string name="colectivos">Buses</string>
    <string name="subte">Subway</string>
    <string name="trenes">Trains</string>
    <string name="selectStartPos">Select starting position</string>
    <string name="selectDestPos">Select destination position</string>
    <string name="myPos">My Position</string>
    <string name="fromMap">Point on the map</string>
    <string name="favs">Favorites</string>
    <string name="here">here</string>
    <string name="noLocationYet">please wait for a fix and retry</string>
    <string name="errDistance">The minimum distance for searches is 1000 meters!</string>
    <string name="errRequests">Too many requests. Please come back in 10 minutes.</string>
    <string name="noresults">Search did not find any connections. Sorry.</string>
    <string name="results">Results</string>
    <string name="min">min</string>
    <string name="with">with</string>
    <string name="alternatives">Alternatives</string>
    <string name="noaddr">Address not found</string>
    <string name="contacts">Contacts</string>
    <string name="no_favorites">No favorites saved.</string>
    <string name="store_favorite">Store location as favorite?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_adding_fav">Failed to add favorite. Please check your connection.</string>
    <string name="failed_deleting_fav">Failed to delete favorite. Please check your connection.</string>
    <string name="failed_downloading_favs">Failed to download list of favorites. Please check your connection.</string>
    <string name="delete">Delete</string>
    <string name="select_acc">Select account to use:</string>
    <string name="ab_needed">Please choose start and destination before searching!</string>
    <string name="ok">OK</string>
    <string name="question_exit">Exit app?</string>
</resources>
